# ResourceManager

./: CMakeLists.txt
GLAD/: CMakeLists.txt
GLAD/Header/: glad.h
GLAD/src/: glad.c
GLFW/: CMakeLists.txt
LibMath/: CMakeLists.txt
LibMath/Header/Vector/: Vector4.h
LibMath/Source/: Angle.cpp  Matrix.cpp  Vector.cpp
OpenGl/: CMakeLists.txt
OpenGl/Header/: Camera.h  CameraG0.h  CollisionManager.h  EBO.h  EntityManager.h  GameObject.h  IGameManager.h  IResource.h  IResourceManager.h  ITransformable.h  InputScanner.h  KeyboardEvent.h  Light.h  Model.h  MouseClickEvent.h  PlayerGO.h  Renderer.h  ResourceManager.h  RigidBody.h  Shader.h  Texture.h  VAO.h  VBO.h  WallGO.h
OpenGl/Shaders/: frag1.txt
OpenGl/Source/: Camera.cpp  CameraG0.cpp  CollisionManager.cpp  EntityManager.cpp  GameObject.cpp  IGameManager.cpp  IResource.cpp  ITransformable.cpp  InputScanner.cpp  KeyboardEvent.cpp  Model.cpp  MouseClickEvent.cpp  PlayerGO.cpp  Renderer.cpp  ResourceManager.cpp  RigidBody.cpp  Shader.cpp  Texture.cpp  WallGO.cpp  glad.c  main.cpp
ResourceManager/: CMakeLists.txt
ResourceManager/Header/: App.h  IResource.h  ModelMulti.h  PFAGM.h  ResourceManager.h  ResourceManagerMulti.h  RessourceManagerTester.h  ThreadPool.h  ThreadableResource.h  Timer.h
ResourceManager/Source/: App.cpp  IResource.cpp  ModelMulti.cpp  ObjectPools.cpp  PFAGM.cpp  ResourceManager.cpp  ResourceManagerMulti.cpp  RessourceManagerTester.cpp  ThreadPool.cpp  Timer.cpp  main.cpp
assets/textures/: phone.mtl
