cmake_minimum_required(VERSION 3.24 FATAL_ERROR)

get_filename_component(PROJECT_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED true)

project(${PROJECT_NAME} LANGUAGES CXX)

set(TARGET_NAME LibMath)
add_subdirectory(${TARGET_NAME})
set(ADITIONAL_INCLUDE_DIRECTORIES ${ADITIONAL_INCLUDE_DIRECTORIES} ${${TARGET_NAME}_HEADER_DIRECTORY})
set(ADITIONAL_LINK_LIBRARIES ${ADITIONAL_LINK_LIBRARIES} ${TARGET_NAME})

set(TARGET_NAME glad)
add_subdirectory(${TARGET_NAME})
set(ADITIONAL_INCLUDE_DIRECTORIES ${ADITIONAL_INCLUDE_DIRECTORIES} ${${TARGET_NAME}_HEADER_DIRECTORY})
set(ADITIONAL_LINK_LIBRARIES ${ADITIONAL_LINK_LIBRARIES} ${TARGET_NAME})

set(TARGET_NAME glfw)
add_subdirectory(${TARGET_NAME})
set(ADITIONAL_INCLUDE_DIRECTORIES ${ADITIONAL_INCLUDE_DIRECTORIES} ${${TARGET_NAME}_HEADER_DIRECTORY})
set(ADITIONAL_LINK_LIBRARIES ${ADITIONAL_LINK_LIBRARIES} ${TARGET_NAME})

set(TARGET_NAME OpenGl)
add_subdirectory(${TARGET_NAME})
set(ADITIONAL_INCLUDE_DIRECTORIES ${ADITIONAL_INCLUDE_DIRECTORIES} ${${TARGET_NAME}_HEADER_DIRECTORY})
set(ADITIONAL_LINK_LIBRARIES ${ADITIONAL_LINK_LIBRARIES} ${TARGET_NAME})

set(TARGET_NAME ResourceManager)
add_subdirectory(${TARGET_NAME})


#set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ResourceManager)
