# GLFW
include(FetchContent)

FetchContent_Declare(
	GLFW 
	GIT_REPOSITORY https://github.com/glfw/glfw.git
	GIT_TAG 3.3.8
	GIT_SHALLOW ON
)

set(BUILD_SHARED_LIBS OFF)
set(GLFW_INSTALL OFF)
set(GLFW_BUILD_EXAMPLES OFF)
set(GLFW_BUILD_TESTS OFF)
set(GLFW_BUILD_DOCS OFF)

FetchContent_MakeAvailable(GLFW)

set(TARGET_NAME glfw PARENT_SCOPE)
set(TARGET_HEADER_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include)
set(${TARGET_NAME}_HEADER_DIRECTORY ${TARGET_HEADER_DIRECTORY} PARENT_SCOPE)

