#- LibMath (Library)

file(GLOB_RECURSE TARGET_SOURCE_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/*.c
)
	
file(GLOB_RECURSE TARGET_HEADER_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/*.h
	${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
)

set(TARGET_FILES ${TARGET_SOURCE_FILES} ${TARGET_HEADER_FILES})
set(TARGET_HEADER_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Header)
set(${TARGET_NAME}_HEADER_DIRECTORY ${TARGET_HEADER_DIRECTORY} PARENT_SCOPE)

add_library(${TARGET_NAME} STATIC)

target_sources(${TARGET_NAME} PRIVATE ${TARGET_FILES})
target_include_directories(${TARGET_NAME} PRIVATE ${TARGET_HEADER_DIRECTORY})
target_link_libraries(${TARGET_NAME} PRIVATE Ws2_32.lib)

if (MSVC)
	target_compile_options(${TARGET_NAME} PRIVATE /W4 /WX)
else ()
	message("not using MSVC")
endif()
